# crucible

./: Cargo.toml  README.md  benchmark_results.json  error.txt  ets_bench.erl  ets_benchmark.erl  ets_memory_benchmark.erl  valkey_bench.sh
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  dependency-check.yml  publish.yml
bench_results/: bench_ahash_dashmap.txt  bench_ahash_dashmap_xxhash.txt  bench_ahash_dashmap_xxhash_prefetch.txt  bench_ahash_dashmap_xxhash_prefetch_conditional.txt  bench_ahash_dashmap_xxhash_prefetch_shardcapinc.txt  bench_ahash_hashbrown.txt  bench_erl.txt  bench_naive.txt  bench_optimized_crucible.txt  bench_rwlock_improved.txt
examples/: server.rs
src/: arena.rs  error.rs  interner.rs  lib.rs  main.rs  shard.rs  store.rs  term.rs  tests.rs
