[package]
name = "crucible"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.12" 
axum = "0.8.8"
dashmap = "6.1.0"
parking_lot = { version = "0.12.5", features = ["nightly", "deadlock_detection"] }
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
